@@ -9,7 +9,7 @@ kernelversion="2.6.8"
 # in the build scripts
 fdisk="mac-fdisk.txt;cfdisk.txt"
 network="supports-tftp;supports-dhcp;supports-bootp;supports-nfsroot"
-boot="supports-floppy-boot;bootable-disk"
+boot="supports-floppy-boot;bootable-disk;bootable-usb"
 other="supports-pcmcia;supports-serial-console;rescue-needs-root-disk"
 smp="supports-smp"
 goodies="supports-lang-chooser"
