@@ -159,6 +159,11 @@ get it to boot from the USB device. If it doesn't, you can boot from one
 floppy and use the USB stick for the rest of the install. For helpful hints
 and details, see <xref linkend="usb-boot" />.
 
+</para><para arch="powerpc">
+
+Booting Macintosh systems from USB storage devices involves manual use
+of Open Firmware. For directions, see <xref linkend="usb-boot" />.
+
 </para>
   </sect2>
   
