@@ -27,25 +27,50 @@ setups are possible if you follow <xref linkend="usb-copy-flexible"/>).
 
 There is an all-in-one file <filename>hd-media/boot.img.gz</filename>
 which contains all the installer files (including the kernel) as well
-as <command>SYSLINUX</command> and its configuration file. You only
-have to extract it directly to to your USB stick:
+as
+
+<command arch="i386">SYSLINUX</command>
+
+<command arch="powerpc">yaboot</command>
+
+and its configuration file.
+
+<phrase arch="i386">
+You only have to extract it directly to your USB stick:
 
 <informalexample><screen>
 
 gzip -dc boot.img.gz >/dev/<replaceable>sda</replaceable>
 
 </screen></informalexample>
+</phrase>
+
+<phrase arch="powerpc">
+Create a partition of type "Apple_Bootstrap" on your USB stick using
+<command>mac-fdisk</command>'s <userinput>C</userinput> command and
+extract the image directly to that:
+
+<informalexample><screen>
+
+gzip -dc boot.img.gz >/dev/<replaceable>sda2</replaceable>
+
+</screen></informalexample>
+</phrase>
 
 Of course this will destroy anything already on the device, so take
 care that you use the correct device name for your USB stick.
 
 </para><para>
 
-After that, mount the USB memory stick (<userinput>mount /dev/sda
-/mnt</userinput>), which will now have a FAT filesystem on it, and
-copy a Debian netinst or businesscard ISO image to it. Please note
-that the file name must end in <filename>.iso</filename>. Unmount the
-stick (<userinput>umount /mnt</userinput>) and you are done.
+After that, mount the USB memory stick (<userinput>mount
+<phrase arch="i386">/dev/sda</phrase>
+<phrase arch="powerpc">/dev/sda2</phrase>
+/mnt</userinput>), which will now have
+<phrase arch="i386">a FAT filesystem</phrase>
+<phrase arch="powerpc">an HFS filesystem</phrase>
+on it, and copy a Debian netinst or businesscard ISO image to it.
+Please note that the file name must end in <filename>.iso</filename>.
+Unmount the stick (<userinput>umount /mnt</userinput>) and you are done.
 
 </para>
   </sect2>
@@ -55,102 +80,16 @@ stick (<userinput>umount /mnt</userinput>) and you are done.
 <para>
 
 If you like more flexibility or just want to know what's going on, you
-should use the following method to put the files on your stick. We
-will show how to setup the memory stick to use the first partition,
-instead of entire device.
+should use the following method to put the files on your stick.
 
-</para><note><para>
+</para>
 
-Since most USB sticks come pre-configured with a single FAT16
-partition, you probably won't have to repartition or reformat the
-stick.  If you have to do that anyway, use <command>cfdisk</command>
-or any other partitioning tool for creating a FAT16 partition and then
-type
+&usb-setup-i386.xml;
+&usb-setup-powerpc.xml;
 
-<informalexample><screen>
-
-mkdosfs /dev/<replaceable>sda1</replaceable>
-
-</screen></informalexample>
-
-Take care that you use the correct device name for your USB stick. The
-<command>mkdosfs</command> command is contained in the
-<classname>dosfstools</classname> Debian package.
-
-</para></note><para>
-
-In order to start the kernel after booting from the USB stick, we will
-put a boot loader on the stick. Although any boot loader
-(e.g. <command>LILO</command>) should work, it's convenient to use
-<command>SYSLINUX</command>, since it uses a FAT16 partition and can
-be reconfigured by just editing a text file. Any operating system
-which supports the FAT file system can be used to make changes to the
-configuration of the boot loader.
-
-</para><para>
-
-To put <command>SYSLINUX</command> on the FAT16 partition on your USB
-stick, install the <classname>syslinux</classname> and
-<classname>mtools</classname> packages on your system, and type
-
-<informalexample><screen>
-
-syslinux /dev/<replaceable>sda1</replaceable>
-
-</screen></informalexample>
-
-Again, take care that you use the correct device name. The partition
-must not be mounted when starting <command>SYSLINUX</command>. This
-procedure writes a boot sector to the partition and creates the file
-<filename>ldlinux.sys</filename> which contains the boot loader code.
-
-</para><para>
-
-Mount the partition (<userinput>mount /dev/sda1 /mnt</userinput>) and
-copy the following files from the Debian archives to the stick:
-
-<itemizedlist>
-<listitem><para>
-
-<filename>vmlinuz</filename> (kernel binary)
-
-</para></listitem>
-<listitem><para>
-
-<filename>initrd.gz</filename> (initial ramdisk image)
-
-</para></listitem>
-<listitem><para>
-
-<filename>syslinux.cfg</filename> (SYSLINUX configuration file)
-
-</para></listitem>
-<listitem><para>
-
-Optional kernel modules
-
-</para></listitem>
-</itemizedlist>
-
-If you want to rename the files, please note that
-<command>SYSLINUX</command> can only process DOS (8.3) file names.
-
-</para><para>
-
-The <filename>syslinux.cfg</filename> configuration file should
-contain the following two lines:
-
-<informalexample><screen>
-
-default vmlinuz
-append initrd=initrd.gz ramdisk_size=10000 root=/dev/rd/0 init=/linuxrc devfs=mount,dall rw
-
-</screen></informalexample>
-
-Please note, that the <userinput>ramdisk_size</userinput> parameter
-may need to be increased, depending on the image you are booting.
-
-</para><para>
+   <sect3>
+   <title>Adding an ISO image</title>
+<para>
 
 Now you should put any Debian ISO image (businesscard, netinst or even
 a full one) onto your stick (if it fits). The file name of such an
@@ -170,7 +109,13 @@ support.
 When you are done, unmount the USB memory stick (<userinput>umount
 /mnt</userinput>) and activate its write protection switch.
 
-</para><warning><para>
+</para>
+   </sect3>
+
+   <!-- TODO: doesn't this section belong later? -->
+   <sect3 arch="i386">
+   <title>Booting the USB stick</title>
+<warning><para>
 
 If your system refuses to boot from the memory stick, the stick may
 contain an invalid master boot record (MBR). To fix this, use the
@@ -184,5 +129,6 @@ install-mbr /dev/<replaceable>sda</replaceable>
 </screen></informalexample>
 
 </para></warning>
+   </sect3>
   </sect2>
  </sect1>
